<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="match_parent"
    android:contentDescription="@string/todo_title"
    tools:context=".TodoFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_todo"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:layout_marginBottom="20dp"
                android:textSize="25sp"
                android:fontFamily="@font/aclonica"
                />

            <EditText
                android:id="@+id/fragment_todo_txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/todo_title"
                android:inputType="textPersonName" />


            <EditText
                android:id="@+id/fragment_todo_txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/todo_description"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textView3"
                android:textSize="15sp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/todo_category" />

            <Spinner
                android:id="@+id/fragment_todo_cbo_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo_category"
                android:minHeight="48dp" />


            <EditText
                android:id="@+id/fragment_todo_txt_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:ems="10"
                android:focusable="false"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/todo_date" />

            <TextView
                android:id="@+id/textView5"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/todo_priority" />

            <RadioGroup
                android:id="@+id/fragment_todo_rg_priority"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/fragment_todo_rb_high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/todo_high" />

                <RadioButton
                    android:id="@+id/fragment_todo_rb_mid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/todo_medium" />

                <RadioButton
                    android:id="@+id/fragment_todo_rb_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/todo_low" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/fragment_todo_chk_complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/todo_complete"
                android:visibility="gone"
                android:text="@string/todo_complete" />

            <Button
                android:id="@+id/fragment_todo_btn_Save"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple"
                android:text="@string/save_todo" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>