<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/updateActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/todo_title"
    android:layout_margin="20dp"
    tools:context=".UpdateTodo">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:fontFamily="@font/aclonica"
                android:text="@string/update_todo" />

            <EditText
                android:id="@+id/fragment_todo_txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/todo_title"
                android:inputType="textPersonName"/>



            <EditText
                android:id="@+id/fragment_todo_txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/todo_description"
                android:inputType="textMultiLine"/>





            <EditText
                android:id="@+id/fragment_todo_txt_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:ems="10"
                android:focusable="false"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/todo_date" />



            <CheckBox
                android:id="@+id/fragment_todo_chk_complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/todo_complete"
                android:text="@string/todo_complete" />

            <Button
                android:id="@+id/todo_btn_Update"
                android:layout_width="match_parent"
                android:backgroundTint="@color/purple"
                android:layout_height="wrap_content"
                android:text="@string/update" />
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>