<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_margin="30dp"
    tools:context=".CategoryFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/add_category"
        android:layout_gravity="center"
        />
    <EditText
        android:id="@+id/fragment_category_txt_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ems="10"
        android:layout_marginTop="50dp"
        android:hint="@string/category_name"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/fragment_Category_btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/purple"
        android:layout_weight="0"
        android:text="@string/save" />
</LinearLayout>
